--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
         enabled = true
     }
 
+    dataBinding {
+        enabled = true
+    }
 
     buildTypes {
         release {
@@ -50,6 +53,9 @@ ext {
     coroutines = '1.3.6'
     daggerVersion = '2.28'
     ktx = '1.1.0'
+    recyclerViewVersion = '1.2.0-alpha03'
+    constraintLayoutVersion = '1.1.3'
+    materialVersion = '1.1.0'
 }
 
 dependencies {
@@ -57,7 +63,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -73,6 +78,9 @@ dependencies {
     implementation "androidx.paging:paging-runtime:$pagingVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.fragment:fragment-ktx:$ktx"
+    implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "com.google.android.material:material:$materialVersion"
 
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
