--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,9 @@ ext {
     okhttpLoggingInterceptorVersion = '4.0.0'
     coroutines = '1.3.6'
     daggerVersion = '2.28'
-    ktx = '1.1.0'
+    daggerHiltAndroidVersion = '2.28-alpha'
+    daggerHiltVersion = '1.0.0-alpha01'
+    ktx = '1.2.5'
     recyclerViewVersion = '1.2.0-alpha03'
     constraintLayoutVersion = '1.1.3'
     materialVersion = '1.1.0'
@@ -93,10 +95,11 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
 
     // Dagger hilt
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    implementation "com.google.dagger:hilt-android:$daggerHiltAndroidVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$daggerHiltAndroidVersion"
+    implementation "androidx.hilt:hilt-common:$daggerHiltVersion"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$daggerHiltVersion"
+    kapt "androidx.hilt:hilt-compiler:$daggerHiltVersion"
 
     // coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
